--- a/application.properties
+++ b/application.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
 #indicates 100%
 spring.sleuth.sampler.percentage=1.0
-spring.zipkin.baseUrl=http://localhost:9411/
+spring.zipkin.baseUrl=http://localhost:9411
