--- a/application.properties
+++ b/application.properties
@@ -4,4 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 #eureka.client.service-url.defaultZone=http://Eur1:2222/eureka,http://Eur3:2223/eureka,http://Eur3:2224/eureka
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
 spring.sleuth.sampler.percentage=1.0
+spring.zipkin.enabled=true
 spring.zipkin.baseUrl=http://localhost:9411
